# advanced_rag_finvault

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml
backend/: main.py
backend/api/: error_handlers.py
backend/api/routes/: __init__.py  chat.py  health.py  indexing.py  ingest.py  retrieve.py
backend/core/: config.py  logging.py
backend/db/: collections.py  qdrant_client.py
backend/embeddings/: __init__.py  base.py  hash_embedder.py  ollama_embedder.py
backend/ingestion/: artifacts.py  chunker.py  job_store.py  models.py  normalizer.py  validator.py
backend/ingestion/parsers/: __init__.py  base.py  docling_parser.py  pypdf_parser.py
backend/llm/: __init__.py  base.py  ollama_client.py
backend/schemas/: chat.py  common.py  indexing.py  ingest.py  retrieve.py
backend/services/: chat_service.py  context_builder.py  indexing_service.py  ingestion_service.py  mock_chat.py  mock_ingestion.py  retrieval_filters.py  retrieval_pipeline.py  retrieval_service.py
docs/: README.md
frontend/: app.py  config.py
frontend/components/: sections.py
frontend/services/: api_client.py
scripts/: smoke_fastapi.py  smoke_ollama.py  smoke_qdrant.py  smoke_streamlit.py
tests/: test_backend_stage1_contract.py  test_ingest_upload_endpoint.py  test_stage0_smoke.py
