[project]
name = "finvault"
version = "0.1.0"
description = "Stage-based local-first RAG sandbox scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "pypdf>=5.1.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.22",
  "qdrant-client>=1.11.0",
  "streamlit>=1.39.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
